# dmx512usb

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
d2xx/: README
src/: dmx512usb.cpp  dmx512usb.h  example.cpp
